infra/k8s/expiracion-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiracion-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiracion
  template:
    metadata:
      labels:
        app: expiracion
    spec:
      containers:
        - name: expiracion
          image: eloyk/expiracion
