infra/k8s/almacen-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: almacen-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: almacen
  template:
    metadata:
      labels:
        app: almacen
    spec:
      containers:
        - name: almacen
          image: eloyk/almacen
---
apiVersion: v1
kind: Service
metadata:
  name: almacen-srv
spec:
  selector:
    app: almacen
  ports:
    - name: almacen
      protocol: TCP
      port: 3000
      targetPort: 3000
