infra/k8s/autorizador-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autorizador-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autorizador
  template:
    metadata:
      labels:
        app: autorizador
    spec:
      containers:
        - name: autorizador
          image: eloyk/autorizador
---
apiVersion: v1
kind: Service
metadata:
  name: autorizador-srv
spec:
  selector:
    app: autorizador
  ports:
    - name: autorizador
      protocol: TCP
      port: 3000
      targetPort: 3000
