infra/k8s/categoria-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categoria-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categoria
  template:
    metadata:
      labels:
        app: categoria
    spec:
      containers:
        - name: categoria
          image: eloyk/categoria
---
apiVersion: v1
kind: Service
metadata:
  name: categoria-srv
spec:
  selector:
    app: categoria
  ports:
    - name: categoria
      protocol: TCP
      port: 3000
      targetPort: 3000
