infra/k8s/compra-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compra-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compra
  template:
    metadata:
      labels:
        app: compra
    spec:
      containers:
        - name: compra
          image: eloyk/compra
---
apiVersion: v1
kind: Service
metadata:
  name: compra-srv
spec:
  selector:
    app: compra
  ports:
    - name: compra
      protocol: TCP
      port: 3000
      targetPort: 3000
