infra/k8s/compra-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compra-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compra-mongo
  template:
    metadata:
      labels:
        app: compra-mongo
    spec:
      containers:
        - name: compra-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: compra-mongo-srv
spec:
  selector:
    app: compra-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
