infra/k8s/empresa-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: empresa-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: empresa
  template:
    metadata:
      labels:
        app: empresa
    spec:
      containers:
        - name: empresa
          image: eloyk/empresa
---
apiVersion: v1
kind: Service
metadata:
  name: empresa-srv
spec:
  selector:
    app: empresa
  ports:
    - name: empresa
      protocol: TCP
      port: 3000
      targetPort: 3000
