infra/k8s/establecimiento-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: establecimiento-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: establecimiento
  template:
    metadata:
      labels:
        app: establecimiento
    spec:
      containers:
        - name: establecimiento
          image: eloyk/establecimiento
---
apiVersion: v1
kind: Service
metadata:
  name: establecimiento-srv
spec:
  selector:
    app: establecimiento
  ports:
    - name: establecimiento
      protocol: TCP
      port: 3000
      targetPort: 3000
