infra/k8s/expiracion-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiracion-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiracion-redis
  template:
    metadata:
      labels:
        app: expiracion-redis
    spec:
      containers:
        - name: expiracion-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiracion-redis-srv
spec:
  selector:
    app: expiracion-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
