infra/k8s/factura-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factura-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factura
  template:
    metadata:
      labels:
        app: factura
    spec:
      containers:
        - name: factura
          image: eloyk/factura
---
apiVersion: v1
kind: Service
metadata:
  name: factura-srv
spec:
  selector:
    app: factura
  ports:
    - name: factura
      protocol: TCP
      port: 3000
      targetPort: 3000
