infra/k8s/manejador-precio-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manejador-precio-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manejador-precio
  template:
    metadata:
      labels:
        app: manejador-precio
    spec:
      containers:
        - name: manejador-precio
          image: eloyk/manejador-precio
---
apiVersion: v1
kind: Service
metadata:
  name: manejador-precio-srv
spec:
  selector:
    app: manejador-precio
  ports:
    - name: manejador-precio
      protocol: TCP
      port: 3000
      targetPort: 3000
