infra/k8s/permiso-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: permiso-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: permiso
  template:
    metadata:
      labels:
        app: permiso
    spec:
      containers:
        - name: permiso
          image: eloyk/permiso
---
apiVersion: v1
kind: Service
metadata:
  name: permiso-srv
spec:
  selector:
    app: permiso
  ports:
    - name: permiso
      protocol: TCP
      port: 3000
      targetPort: 3000
