infra/k8s/producto-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producto-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producto
  template:
    metadata:
      labels:
        app: producto
    spec:
      containers:
        - name: producto
          image: eloyk/producto
---
apiVersion: v1
kind: Service
metadata:
  name: producto-srv
spec:
  selector:
    app: producto
  ports:
    - name: producto
      protocol: TCP
      port: 3000
      targetPort: 3000
