infra/k8s/producto-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producto-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producto-mongo
  template:
    metadata:
      labels:
        app: producto-mongo
    spec:
      containers:
        - name: producto-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: producto-mongo-srv
spec:
  selector:
    app: producto-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
