infra/k8s/proveedor-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proveedor-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proveedor
  template:
    metadata:
      labels:
        app: proveedor
    spec:
      containers:
        - name: proveedor
          image: eloyk/proveedor
---
apiVersion: v1
kind: Service
metadata:
  name: proveedor-srv
spec:
  selector:
    app: proveedor
  ports:
    - name: proveedor
      protocol: TCP
      port: 3000
      targetPort: 3000
