infra/k8s/unidad-medida-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unidad-medida-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unidad-medida
  template:
    metadata:
      labels:
        app: unidad-medida
    spec:
      containers:
        - name: unidad-medida
          image: eloyk/unidad-medida
---
apiVersion: v1
kind: Service
metadata:
  name: unidad-medida-srv
spec:
  selector:
    app: unidad-medida
  ports:
    - name: unidad-medida
      protocol: TCP
      port: 3000
      targetPort: 3000
