infra/k8s/venta-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: venta-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: venta
  template:
    metadata:
      labels:
        app: venta
    spec:
      containers:
        - name: venta
          image: eloyk/venta
---
apiVersion: v1
kind: Service
metadata:
  name: venta-srv
spec:
  selector:
    app: venta
  ports:
    - name: venta
      protocol: TCP
      port: 3000
      targetPort: 3000
